Update code html and style

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,6 @@
       align-items: center;
       justify-content: center;
       margin-bottom: 5%;
-      background-color: wheat;
     }
 
     main {
@@ -45,7 +44,7 @@
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
-      background-color: aqua;
+      gap: 10px;
     }
   </style>
 </head>
