--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,6 @@
     body {
       height: 100%;
       width: 100%;
-      background-color: red;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -41,7 +40,7 @@
       width: 90%;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       flex-wrap: wrap;
       gap: 10px;
